--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-  <link href="https://file.myfontastic.com/wvFjEyZ7Y4rnihwXhgm7Qn/icons.css" rel="stylesheet">
+  <link href="./icon.css" rel="stylesheet">
   <script type="text/javascript" src="./main.js"></script>
   <link rel="stylesheet" type="text/css" href="./animations.css">
   <link rel="stylesheet" type="text/css" href="./style.css">
